--- a/checker.css
+++ b/checker.css
@@ -10,7 +10,6 @@ body {
 
 #main {
     background-color: white;
-    width: 50%;
     min-height: 100%;
     margin: auto;
 }
@@ -20,10 +19,14 @@ body {
 }
 
 #title {
-    font-size: x-large;
-    font-weight: bold;
+    margin: 0;
+    padding: 0.5em 1em;
     width: 100%;
-    border-bottom: 1px solid #4682B4;
+    font-size: 1.5em;
+    font-family: Calibri, Arial, sans-serif;
+    line-height: 1em;
+    color: #EEEEEE;
+    background-color: #124766;
 }
 
 #output {
